--- a/CódigoFuente/BitacorasProduccion/Views/Shared/_Layout.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/Shared/_Layout.cshtml
@@ -46,6 +46,10 @@
         .boton-verde {
             background-color: forestgreen;
         }
+
+        .tooltip {
+            pointer-events: none;
+        }
     </style>
 
     @RenderSection("estilos", required: false)
