--- a/CódigoFuente/BitacorasProduccion/Views/IT_matriz_requerimientos/ListadoUsuarios.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/IT_matriz_requerimientos/ListadoUsuarios.cshtml
@@ -50,7 +50,7 @@
     <div class="">
         <div class="page-title">
             <div class="title_left">
-                
+
             </div>
         </div>
 
@@ -78,32 +78,32 @@
                                         @using (Html.BeginForm(null, null, FormMethod.Get, new { id = "buscarForm", @class = "form-horizontal form-label-left" }))
                                         {
 
-                                        <div class="form-group row ">
-                                            <label class="control-label col-md-1 col-sm-1" for="nombre" style="text-align:right">Nombre:</label>
-                                            <div class="col-md-3 col-sm-3 ">
-                                                <input type="text" id="nombre" name="nombre" class="form-control" value="@nombre" autocomplete="off" />
+                                            <div class="form-group row ">
+                                                <label class="control-label col-md-1 col-sm-1" for="nombre" style="text-align:right">Nombre:</label>
+                                                <div class="col-md-3 col-sm-3 ">
+                                                    <input type="text" id="nombre" name="nombre" class="form-control" value="@nombre" autocomplete="off" />
+                                                </div>
+                                                <label class="control-label col-md-1 col-sm-1" for="nombre_equipo" style="text-align:right">Planta:</label>
+                                                <div class="col-md-2 col-sm-2 ">
+                                                    @Html.DropDownList("planta_clave", null, htmlAttributes: new { @class = "form-control select2bs4", @style = "width:100%" })
+                                                </div>
+                                                <label class="control-label col-md-1 col-sm-1" for="num_empleado" style="text-align:right">N&uacute;m. Empleado:</label>
+                                                <div class="col-md-2 col-sm-2 ">
+                                                    <input type="text" id="num_empleado" name="num_empleado" class="form-control" value="@num_empleado" autocomplete="off" />
+                                                </div>
+                                                <div class="col-md-1 col-sm-1">
+                                                    <a href="@Url.Action( "Index", ViewBag.ControllerName)" class="btn btn-warning">
+                                                        <i class="fa fa-refresh"></i>
+                                                    </a>
+                                                </div>
+                                                <div class="col-md-1 col-sm-1">
+                                                    <input type="submit" value="Buscar" class="btn btn-info float-right" />
+                                                </div>
                                             </div>
-                                            <label class="control-label col-md-1 col-sm-1" for="nombre_equipo" style="text-align:right">Planta:</label>
-                                            <div class="col-md-2 col-sm-2 ">
-                                                @Html.DropDownList("planta_clave", null, htmlAttributes: new { @class = "form-control select2bs4", @style = "width:100%" })
-                                            </div>
-                                            <label class="control-label col-md-1 col-sm-1" for="num_empleado" style="text-align:right">N&uacute;m. Empleado:</label>
-                                            <div class="col-md-2 col-sm-2 ">
-                                                <input type="text" id="num_empleado" name="num_empleado" class="form-control" value="@num_empleado" autocomplete="off" />
-                                            </div>
-                                            <div class="col-md-1 col-sm-1">
-                                                <a href="@Url.Action( "Index", ViewBag.ControllerName)" class="btn btn-warning">
-                                                    <i class="fa fa-refresh"></i>
-                                                </a>
-                                            </div>
-                                            <div class="col-md-1 col-sm-1">
-                                                <input type="submit" value="Buscar" class="btn btn-info float-right" />
-                                            </div>
-                                        </div>
 
                                         }
                                         <hr />
-                                       
+
                                     </div>
                                     <table id="datatable_1" class="table table-striped table-bordered nowrap" cellspacing="0" width="100%">
                                         <thead>
@@ -123,7 +123,7 @@
                                                 </th>
                                                 <th>
                                                     @Html.DisplayNameFor(model => model.correo)
-                                                </th>                                                
+                                                </th>
                                                 <th>
                                                     @Html.DisplayNameFor(model => model.activo)
                                                 </th>
@@ -133,52 +133,66 @@
                                         <tbody>
                                             @foreach (var item in Model)
                                             {
-                                            <tr style="@(item.activo == false ? "color:red" :"" )">
-                                                <td>
-                                                    <a  href="@Url.Action("Details", "empleados", new { id = item.id})" class="btn btn-info btn-sm" rel="tooltip" data-title="Detalles de empleado">
-                                                        <i class="fa fa-info-circle"></i>
-                                                    </a>                                                    
-                                                    <span class="d-inline-block" tabindex="0" data-toggle="tooltip" title= "@(item.IT_matriz_requerimientos.Count != 0 && item.IT_matriz_requerimientos.FirstOrDefault().estatus != Bitacoras.Util.IT_MR_Status.FINALIZADO ? "Solicitud en proceso": null)" >
-                                                        <a href="@Url.Action("CrearMatriz",ViewBag.ControllerName, new { id = item.id})" class="btn @(item.IT_matriz_requerimientos.Count == 0 ? "btn-primary" : item.IT_matriz_requerimientos.FirstOrDefault().estatus == Bitacoras.Util.IT_MR_Status.FINALIZADO ? "btn-warning": "btn-secondary disabled") btn-sm" rel="tooltip" data-title="@(item.IT_matriz_requerimientos.Count == 0? "Crear solicitud":item.IT_matriz_requerimientos.FirstOrDefault().estatus == Bitacoras.Util.IT_MR_Status.FINALIZADO ? "Modificación de Usuario":"Solicitud en Proceso")">
-                                                            <i class="fa fa-users"></i>
+                                                <tr style="@(item.activo == false ? "color:red" :"" )">
+                                                    <td>
+                                                        <a href="@Url.Action("Details", "empleados", new { id = item.id})" class="btn btn-info btn-sm" rel="tooltip" data-title="Detalles de empleado">
+                                                            <i class="fa fa-info-circle"></i>
                                                         </a>
-                                                    </span>
-                                                </td>
-                                                <th>
-                                                    @Html.DisplayFor(modelItem => item.numeroEmpleado)
-                                                </th>
-                                                <th>
-                                                    @Html.DisplayFor(modelItem => item.plantas.descripcion)
-                                                </th>
-                                                <th>
-                                                    @Html.DisplayFor(modelItem => item.ConcatNombre)
-                                                </th>
-                                                <th>
-                                                    @Html.DisplayFor(modelItem => item.C8ID)
-                                                </th>
+                                                        @if (item.IT_matriz_requerimientos.Count == 0)
+                                                        {
+                                                            <a href="@Url.Action("CrearMatriz", ViewBag.ControllerName, new { id = item.id })" class="btn btn-primary btn-sm" rel="tooltip" data-title="Crear solicitud">
+                                                                <i class="fa fa-users"></i>
+                                                            </a>
+                                                        }
+                                                        else if (item.IT_matriz_requerimientos.FirstOrDefault().estatus == Bitacoras.Util.IT_MR_Status.FINALIZADO)
+                                                        {
+                                                            <a href="@Url.Action("CrearMatriz", ViewBag.ControllerName, new { id = item.id })" class="btn btn-warning btn-sm" rel="tooltip" data-title="Modificación de Usuario">
+                                                                <i class="fa fa-users"></i>
+                                                            </a>
+                                                        }
+                                                        else
+                                                        {
+                                                            <a href="@Url.Action("Details", ViewBag.ControllerName, new { id = item.IT_matriz_requerimientos.FirstOrDefault().id })" class="btn btn-secondary btn-sm" rel="tooltip" data-title="Solicitud en Proceso">
+                                                                <i class="fa fa-users"></i>
+                                                            </a>
+                                                        }
 
-                                                <th>
-                                                    @Html.DisplayFor(modelItem => item.correo)
-                                                </th>
+                                                    </td>
+                                                    <th>
+                                                        @Html.DisplayFor(modelItem => item.numeroEmpleado)
+                                                    </th>
+                                                    <th>
+                                                        @Html.DisplayFor(modelItem => item.plantas.descripcion)
+                                                    </th>
+                                                    <th>
+                                                        @Html.DisplayFor(modelItem => item.ConcatNombre)
+                                                    </th>
+                                                    <th>
+                                                        @Html.DisplayFor(modelItem => item.C8ID)
+                                                    </th>
 
-                                                @*<th>
-            @Html.DisplayFor(modelItem => item.Area.descripcion)
-        </th>
-        <th>
-            @Html.DisplayFor(modelItem => item.puesto1.descripcion)
-        </th>*@
-                                                <th>
-                                                    @if (item.activo.HasValue && item.activo.Value)
-                                                    {
-                                                        <span>Activo</span>
-                                                    }
-                                                    else
-                                                    {
-                                                        <span>Inactivo</span>
-                                                    }
-                                                </th>
+                                                    <th>
+                                                        @Html.DisplayFor(modelItem => item.correo)
+                                                    </th>
 
-                                            </tr>
+                                                    @*<th>
+                                                            @Html.DisplayFor(modelItem => item.Area.descripcion)
+                                                        </th>
+                                                        <th>
+                                                            @Html.DisplayFor(modelItem => item.puesto1.descripcion)
+                                                        </th>*@
+                                                    <th>
+                                                        @if (item.activo.HasValue && item.activo.Value)
+                                                        {
+                                                            <span>Activo</span>
+                                                        }
+                                                        else
+                                                        {
+                                                            <span>Inactivo</span>
+                                                        }
+                                                    </th>
+
+                                                </tr>
                                             }
                                         </tbody>
                                     </table>
@@ -218,7 +232,7 @@
                 "info": false
             });
 
-          
+
 
             // Initialize Select2 Elements (debe ir después de asignar el valor)
             $('.select2bs4').select2({
@@ -227,7 +241,7 @@
 
         });
 
-      
+
         //agranda el tamaño de la barra
         window.onload = function () {
             document.getElementById('menu_toggle').click();
