--- a/CódigoFuente/BitacorasProduccion/Views/Shared/_Layout.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/Shared/_Layout.cshtml
@@ -29,13 +29,17 @@
         <link href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.css" rel="stylesheet">
     }
     <style>
+        body {
+            font-family: 'TKTypeMedium';
+            src: url('../../fonts/tkmm/TKTypeRegular.ttf') format('truetype');
+        }
         table.dataTable thead {
-            background-color: #0094ff;
+            background-color: #009ff5;
             color: azure;
         }
 
         .page-item.active .page-link {
-            background-color: #0094ff !important;
+            background-color: #009ff5 !important;
             color: azure !important;
         }
 
@@ -45,6 +49,10 @@
 
         .boton-verde {
             background-color: forestgreen;
+        }
+
+        .text-thyssen-color {
+            color: #009ff5
         }
 
         .tooltip {
