--- a/CódigoFuente/BitacorasProduccion/Views/Home/Index.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/Home/Index.cshtml
@@ -6,15 +6,14 @@
 
 <div class="right_col" role="main">
     <div class="">
-        <div class="page-title">
-            <div class="title_left">
-                <h3>thyssenkrupp Materials de M&eacute;xico S.A de C.V.</h3>
-            </div>
-        </div>
+       
 
         <div class="clearfix"></div>
 
         <div class="row">
+            <div class="col-md-12 col-sm-12 text-thyssen-color">
+                <h3>thyssenkrupp Materials de M&eacute;xico S.A de C.V.</h3>
+            </div>
             <div class="col-md-4 col-sm-4">
                 <div class="x_panel">
                     <div class="x_title">
