--- a/CódigoFuente/BitacorasProduccion/Views/IT_matriz_requerimientos/Details.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/IT_matriz_requerimientos/Details.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Requerimientos de Usuario";
     ViewBag.PrimerNivel = "recursos_humanos";
     //ViewBag.SegundoNivel = "empleados";
-    ViewBag.ControllerName = "Empleados";
+    ViewBag.ControllerName = "IT_matriz_requerimientos";
 
     List<Portal_2_0.Models.IT_hardware_tipo> listHardware = (List<Portal_2_0.Models.IT_hardware_tipo>)ViewBag.listHardware;
     List<Portal_2_0.Models.IT_software_tipo> listSoftware = (List<Portal_2_0.Models.IT_software_tipo>)ViewBag.listSoftware;
@@ -180,19 +180,19 @@
                                     @foreach (var item in Model.IT_matriz_hardware)
                                     {
                                         <tr>
-                                            <th>@(Model.IT_matriz_hardware.ToList().IndexOf(item)+1)</th>
-                                            <th>
+                                            <td>@(Model.IT_matriz_hardware.ToList().IndexOf(item)+1)</td>
+                                            <td>
                                                 @item.IT_hardware_tipo.descripcion
-                                            </th>
-                                            <th>
+                                            </td>
+                                            <td>
                                                 @item.descripcion
-                                            </th>
-                                            <th>
+                                            </td>
+                                            <td>
                                                 <span>@(!item.completado.HasValue?"PENDIENTE":item.completado.Value?"SÍ":"NO")</span>
-                                            </th>
-                                            <th>
+                                            </td>
+                                            <td>
                                                 <span>@item.comentario</span>
-                                            </th>
+                                            </td>
                                         </tr>
                                     }
                                 </tbody>
@@ -229,19 +229,19 @@
                                     @foreach (var item in Model.IT_matriz_software)
                                     {
                                         <tr>
-                                            <th>@(Model.IT_matriz_software.ToList().IndexOf(item)+1)</th>
-                                            <th>
+                                            <td>@(Model.IT_matriz_software.ToList().IndexOf(item)+1)</td>
+                                            <td>
                                                 @item.IT_software_tipo.descripcion
-                                            </th>
-                                            <th>
+                                            </td>
+                                            <td>
                                                 @item.descripcion
-                                            </th>
-                                            <th>
+                                            </td>
+                                            <td>
                                                 <span>@(!item.completado.HasValue?"PENDIENTE":item.completado.Value?"SÍ":"NO")</span>
-                                            </th>
-                                            <th>
+                                            </td>
+                                            <td>
                                                 <span>@item.comentario</span>
-                                            </th>
+                                            </td>
                                         </tr>
                                     }
                                 </tbody>
@@ -293,19 +293,19 @@
                                     @foreach (var item in Model.IT_matriz_comunicaciones)
                                     {
                                         <tr>
-                                            <th>@(Model.IT_matriz_comunicaciones.ToList().IndexOf(item)+1)</th>
-                                            <th>
+                                            <td>@(Model.IT_matriz_comunicaciones.ToList().IndexOf(item)+1)</td>
+                                            <td>
                                                 @item.IT_comunicaciones_tipo.descripcion
-                                            </th>
-                                            <th>
+                                            </td>
+                                            <td>
                                                 @item.descripcion
-                                            </th>
-                                            <th>
+                                            </td>
+                                            <td>
                                                 <span>@(!item.completado.HasValue?"PENDIENTE":item.completado.Value?"SÍ":"NO")</span>
-                                            </th>
-                                            <th>
+                                            </td>
+                                            <td>
                                                 <span>@item.comentario</span>
-                                            </th>
+                                            </td>
                                         </tr>
                                     }
                                 </tbody>
@@ -343,19 +343,19 @@
                                     @foreach (var item in Model.IT_matriz_carpetas)
                                     {
                                         <tr>
-                                            <th>@(Model.IT_matriz_carpetas.ToList().IndexOf(item)+1)</th>
-                                            <th>
+                                            <td>@(Model.IT_matriz_carpetas.ToList().IndexOf(item)+1)</td>
+                                            <td>
                                                 @item.IT_carpetas_red.descripcion
-                                            </th>
-                                            <th>
+                                            </td>
+                                            <td>
                                                 @item.descripcion
-                                            </th>
-                                            <th>
+                                            </td>
+                                            <td>
                                                 <span>@(!item.completado.HasValue?"PENDIENTE":item.completado.Value?"SÍ":"NO")</span>
-                                            </th>
-                                            <th>
+                                            </td>
+                                            <td>
                                                 <span>@item.comentario</span>
-                                            </th>
+                                            </td>
                                         </tr>
                                     }
                                 </tbody>
@@ -495,8 +495,13 @@
                         @if (Model.estatus == Bitacoras.Util.IT_MR_Status.FINALIZADO) {
                         <div class="ln_solid"></div>
                         <div class="form-group row">
-                            <div class="col-md-12 col-sm-12">
-                                <a href="@Url.Action("GenerarPDF", ViewBag.ControllerName, new { id = Model.id })" class="btn btn-danger btn-lg float-right" rel="tooltip" data-title="Generar PDF" data-placement="right">
+                            <div class="col-md-6 col-sm-6">
+                                <a href="@Url.Action("GenerarPDF", ViewBag.ControllerName, new { id = Model.id })" target="_blank" class="btn btn-info btn-lg float-left" rel="tooltip" data-title="Ver PDF" data-placement="right">
+                                     <i class="fa-solid fa-file-pdf"></i>  Ver Solicitud
+                                </a>
+                            </div>
+                            <div class="col-md-6 col-sm-6">
+                                <a href="@Url.Action("GenerarPDF", ViewBag.ControllerName, new { id = Model.id, inline=false })" target="_blank" class="btn btn-danger btn-lg float-right" rel="tooltip" data-title="Descargar PDF" data-placement="right">
                                     <i class="fa-solid fa-file-pdf"></i> Descargar Solicitud
                                 </a>
                             </div>
